@@ -7,8 +7,10 @@ gcs (0.3.20+siniestro1) UNRELEASED; urgency=low
   * Modified dh_install command to add the 'config_extension' directly. The preparation
     process is no longer necesary.
   * Changed default config_extension to .gcs
+  * Established package building as an option to focus on creating debian sources. Its
+    useful to use other build methods like pbuilder.
 
- -- Enrique Hernández Bello <quique@osl.ull.es>  Mon, 14 Dec 2009 13:16:41 +0000
+ -- Enrique Hernández Bello <quique@osl.ull.es>  Mon, 14 Dec 2009 13:49:10 +0000
 
 gcs (0.3.20) jaunty; urgency=low
 
